# rapitas

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  .prettierrc.json  AGENTS.md  API_OPTIMIZATION_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOWNLOAD_ARTIFACTS.md  GEMINI.md  LICENSE  Makefile  README.md  SCREENSHOT_OPTIMIZATION_CHANGES.md  SECURITY.md  analysis-for-agent.md  analysis-report.md  analysis-result.json  commitlint.config.js  package-lock.json  package.json  pnpm-lock.yaml  project-guide.md  project-improve.md  start-dev-simple.ps1  start-dev.ps1  temp_research_content.json  test.html  tsconfig.base.json
.baselines/: bottlenecks.json  file-size.json
.claude/: .instruction.md  CLAUDE.md  COMMENT_POLICY.md  COMPONENT_SPLITTING_POLICY.md  FEATURE_SCORE_PROMPT.md  FOLDER_ORGANIZATION_POLICY.md  settings.json  settings.local.json
.github/: CI_CD_SETUP.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release.yml
.husky/: pre-commit  pre-push
docs/: ARCHITECTURE.md  AUTO_UPDATE.md  COMMENT_POLICY_JP.md  PERFORMANCE.md  RUNBOOK.md  pre-commit-guide.md
rapitas-backend/: .env.example  .gitignore  .prettierignore  README.md  TYPE_POLICY.md  bun.lockb  bunfig.toml  eslint.config.mjs  fix-all-type-errors.js  global.d.ts  index-optimized.ts  index.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  register-routes.ts  stub-index.ts  temp_verify_content.json  tsconfig.json  tsconfig.test.json
rapitas-desktop/: README.md  create-icon.js  package.json  pnpm-lock.yaml
rapitas-desktop/src-tauri/: Cargo.toml  Rapitas.desktop  build.rs  tauri.build.conf.json  tauri.ci.conf.json  tauri.conf.json  tauri.watch.conf.json
rapitas-desktop/src-tauri/capabilities/: default.json
rapitas-desktop/src-tauri/icons/: README.md  icon.icns
rapitas-desktop/src-tauri/resources/: schema.prisma
rapitas-desktop/src-tauri/resources/schema/: _generators.prisma  agents.prisma  core.prisma  github.prisma  memory.prisma  schedule.prisma  system.prisma
rapitas-desktop/src-tauri/src/: browser_launcher.rs  main.rs  release.rs  shortcut_config.rs  split_screen_manager.rs  voice_recognition.rs  wake_word.rs  window_manager.rs
rapitas-frontend/: .gitignore  .prettierignore  eslint.config.mjs  knip.json  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
rapitas-manager/: .gitignore  CLAUDE.md  README.md  pubspec.yaml
scripts/: auto-fix-commit.cjs  check-todos.cjs  (+12 more)
(+2170 files in other folders)
