[package]
name = "rapitas-desktop"
version = "1.0.0"
description = "Rapitas - AI-Powered Task Management Desktop App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# 開発モードではdefaultを空にしてdevUrlを使用
# 本番ビルドでは --features custom-protocol を指定
default = []
custom-protocol = ["tauri/custom-protocol"]
